# news-rest-rs

./: Cargo.toml  README.md  template.env
curl/: news-rest-rs.postman_collection.json
curl/categories/: create_category.sh  delete_category.sh  get_categories.sh  update_category.sh
curl/stories/: create_story.sh  delete_story.sh  get_stories.sh  get_story.sh  publish_story.sh  search_stories.sh  update_story.sh
curl/tags/: create_tag.sh  delete_tag.sh  get_tags.sh
curl/users/: create_user.sh  delete_user.sh  get_users.sh  update_user.sh
dynamic/: home.js
migrations/2023-04-15-081103_create_stories/: down.sql  up.sql
migrations/2023-04-17-113808_create_users/: up.sql
migrations/2023-04-21-084441_insert_superuser/: down.sql  up.sql
migrations/2023-04-22-050334_create_tags_and_categories/: down.sql  up.sql
migrations/2023-04-22-110610_alter_stories/: down.sql  up.sql
migrations/2023-05-07-054525_create_indexes/: down.sql  up.sql
src/: connection.rs  db.rs  lib.rs  main.rs  schema.rs  service.rs
src/json_serialization/: to_do_items.rs
src/news/: auth.rs  config.rs  handlers.rs  mod.rs  models.rs  stories.rs
src/news/handlers/: categories.rs  stories.rs  tags.rs  users.rs
src/news/models/: categories.rs  stories.rs  tags.rs  users.rs
src/service/: logger.rs  thread_pool.rs  webserver.rs
src/services/: pbkdf2.rs
src/views/: mod.rs
src/views/app/: items.rs  mod.rs
src/views/to_do/: delete.rs  mod.rs
static/: 404.html  home.html  main_page.html
styles/: base.css  home.css
