[package]
name = "news-rest-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
base64 = "0.21.0"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = {version = "2.0.3", features = ["postgres", "uuid", "chrono"]}
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
ring = "0.16.20"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["full"]}
uuid = {version = "1.3.0", features = ["serde", "v4"]}
